﻿Sigil v0.2.0 RC1 ADD_DATE
    - fixed an issue with filenames with characters that should not appear in valid XML IDs
    having those characters added anyway (issue #344)
    - fixed an issue with files with uppercase extensions not having a mimetype set in the OPF
    (issue #349)
    - fixed an issue with Sigil rewriting headings when the TOC was opened and no heading was 
    edited (issue #327)
    - fixed an issue where adding an existing HTML file through the Book Browser would clear
    the current metadata in the book (issue #329)
    - added a check that prevents Sigil from loading the same resource multiple times in 
    invalid epubs (issue #339) 
    - fixed a bug that made the direct XHTML references in the NCX file less likely (issue #333)
    - fixed an issue with Sigil crashing when trying to save a loaded epub that had some badly
    formed metadata elements (issue #325)

Sigil v0.2.0 ß3 2010.03.23.
    - added two new WYSIWYG actions that work for both Views: "Insert SGF Chapter Marker" which
    inserts the old SGF horizontal rule chapter breaking marker and "Split On SGF Chapter Markers"
    which splits the current chapter according to the placement of these markers (issue #262)
    - chapter splitting now works in Code View
    - fixed an issue with Sigil adding "xmlns='http://www.w3.org/1999/xhtml'" to every element
    when performing a chapter break operation (issue #313)
    - fixed a rare issue with false spaces being inserted into words during import (issue #139)
    - added a confirmation dialog for removing items in the Book Browser (issue #306)
    - fixed an issue with the line number area overlapping the text in the Code View 
    - made Sigil remove the CSS cruft WebKit was adding to the "body" element
    - fixed an issue with spaces in filenames causing bad anchor element path updates
    - fixed an issue with spaces in filenames not being URL encoded in "href" and "src" attributes
    in the OPF and NCX files